<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Personal Fitness Coach</string>
    <string name="foods">Alimentos</string>
    <string name="meals">Comidas</string>
    <string name="exercises">Ejercicios</string>
    <string name="trainnings">Entrenamientos</string>
    <string name="trainningHisctoric">Histórico Entrenamientos</string>
    <string name="weights">Histórico Pesos</string>
    <string name="sharing">Back Up</string>
    <string name="biometricName">Datos biometricos</string>
    <string name="breakfast">Desayuno</string>
    <string name="lunch">Almuerzo</string>
    <string name="dinner">Cena</string>
    <string name="snacks">Snacks</string>
    <string name="menu_settings">Settings</string>
    <string name="main_add">Añadir</string>
    <string name="main_list">Listar</string>
    <string name="button_save">Guardar</string>
    <string name="edit">Editar</string>

    <!-- Food related -->
    <string name="label_brandName">Marca</string>
    <string name="label_calories">Calorias</string>
    <string name="label_proteins">Proteínas</string>
    <string name="label_carbs">Carbohidratos</string>
    <string name="label_sugars">Azúcares</string>
    <string name="label_fiber">Fibra</string>
    <string name="label_fats">Grasa</string>
    <string name="label_saturatedFats">Grasa Sat</string>
    <string name="label_sodium">Sodio</string>

    <!-- add_food related -->
    <string name="hello">Rellena los valores por cada 100gr. de alimento</string>
    <string name="addFoodButton">Añadir</string>
    <string name="foodNameHint">Nombre del alimento</string>
    <string name="brandNameHint">Nombre de la marca del alimento</string>
    <string name="caloriesHint">Calorías del alimento</string>
    <string name="proteinsHint">Gramos de proteínas</string>
    <string name="fatsHint">Introduce los gramos de grasa</string>
    <string name="carbsHint">Gramos de hidratos de carbono</string>
    <string name="sugarsHint">Gramos de azúcares</string>
    <string name="fiberHint">Gramos de fibra</string>
    <string name="saturatedFatsHint">Gramos de grasas saturadas</string>
    <string name="sodiumHint">Gramos de sodio</string>
    <string name="foodNameError">El nombre es obligatorio</string>
    <string name="caloriesError">Las calorías son obligatorias</string>
    <string name="fatsError">Las grasas son obligatorias</string>
    <string name="proteinsError">Las proteínas son obligatorias</string>
    <string name="carbsError">Los hidratos son obligatorios</string>

    <!-- Show food details related -->
    <string name="assureFoodDeletion">¿Seguro que desea eliminar el alimento?</string>
    <string name="mainMenuFoodsList">Lista de comidas</string>
    <string name="foodsListMenuMain">Inicio</string>
    <string name="newFoodInserted">El nuevo alimento ha sido añadido.</string>
    <string name="label_delete">Eliminar</string>
    <string name="label_edit">Editar</string>
    <string name="deleteMessage">ha sido eliminada</string>
    <string name="editFoodMessage">La comida ha sido actualizada</string>
    <string name="name">Nombre</string>
    <string name="description">Descripción:</string>
    <string name="addExerciseTitle">Añadir nuevo ejercicio</string>
    <string name="editExerciseTitle">Editar ejercicio</string>
    <string name="exerciseNameBlank">El nombre del ejercicio está vacío</string>
    <string name="exerciseNameDuplicated">El nombre del ejercicio está repetido</string>
    <string name="exerciseCreated">El ejercicio ha sido creado</string>
    <string name="exerciseDeleted">El ejercicio ha sido eliminado</string>
    <string name="exerciseEdited">El ejercicio ha sido editado</string>
    <string name="save">Guardar</string>
    <string name="exercises_label">Ejercicios</string>
    <string name="exercise_label">Ejercicio</string>
    <string name="trainingCreated">El entrenamiento ha sido guardado</string>
    <string name="trainingDeleted">El entrenamiento ha sido borrado</string>
    <string name="trainingNameBlank">El nombre del entrenamiento está vacío</string>
    <string name="trainingNameDuplicated">El nombre del entrenamiento está repetido</string>
    <string name="trainingEnded">El entrenamiento ha finalizado</string>
    <string name="training_label">Entrenamiento</string>
    <string name="addExerciseToTraining">Añadir un ejercicio</string>
    <string name="duration">Duración</string>
    <string name="repetitions">Repeticiones</string>
    <string name="emptyExercisesList">La lista de ejercicios está vacía.</string>
    <string name="assureTrainingDeletion">¿Seguro que desea eliminar este entrenamiento?</string>
    <string name="label_play">Ejecutar</string>
    <string name="totalTimeLeft">Total restante:</string>
    <string name="resumePause">Continuar/Pausa</string>
    <string name="done">Hecho</string>
    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>
    <string name="repetition">Repetición</string>
    <string name="assureExit">¿Realmente desea salir?</string>
    <string name="kcalUnit">Kcal</string>
    <string name="gramsUnit">g</string>
    <string name="milligramsUnit">mg</string>
    <string name="shortCaloriesLabel">Cal</string>
    <string name="shortProteinLabel">Prote</string>
    <string name="shortCarbsLabel">H. Carb</string>
    <string name="shortFatsLabel">Grasa</string>
    <string name="nextDate">Siguiente fecha</string>
    <string name="previousDate">Anterior fecha</string>
    <string name="addFoodToMeal">Añadir nuevo alimento</string>
    <string name="assurePortionDeletion">¿Seguro que desea quitar esta porción?</string>
    <string name="portionQuantityTitle">Introduce la cantidad del alimento en gramos</string>
    <string name="previousActivity">Ir atrás</string>
    <string name="caloriesBurnt">Calorias quemadas por hora:</string>
    <string name="separator">" - "</string>
    <string name="startDate">Fecha inicio</string>
    <string name="endDate">Fecha fin</string>
    <string name="selectExercise">Selecciona un ejercicio desde la lista de ejercicios</string>
    <string name="selectDateTime">Selecciona una fecha y hora</string>
    <string name="assureHistoricDeletion">¿Seguro que desea eliminar el histórico?</string>
    <string name="theWeight">El peso</string>
    <string name="assureWeightDeletion">¿Seguro que desea eliminar el peso?</string>
    <string name="dateLabel">Fecha:</string>
    <string name="weightLabel">Peso:</string>
    <string name="enterCorrectWeight">Introduzca un peso correcto</string>
    <string name="duplicatedWeight">No se puede añadir un peso para una fecha que ya tiene peso</string>
    <string name="exportData">Exporta los datos de esta entidad a un fichero</string>
    <string name="importData">Importa los datos del fichero de esta entidad</string>
    <string name="sharingButtonDescription">Lanza la actividad para back ups</string>
    <string name="fileExportStarted">Iniciada exportación a fichero</string>
    <string name="fileExportCompleted">Terminada exportación a fichero</string>
    <string name="fileImportStarted">Iniciada importación desde fichero</string>
    <string name="fileImportCompleted">Terminada importación desde fichero</string>

    <!-- User data -->
    <string name="userAge">Edad:</string>
    <string name="userSex">Sexo:</string>
    <string name="userHeight">Altura:</string>
    <string name="userHeightEdit">Altura en metros:</string>
    <string name="userWeight">Último peso:</string>
    <string name="userBMI">IMC:</string>
    <string name="man">Hombre</string>
    <string name="woman">Mujer</string>

</resources>