<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="fill"
    android:orientation="vertical" >

    <fragment
        android:id="@+id/topBarFragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        class="com.gyp.pfc.fragments.TopBarFragment"/>
    
    <TextView
        android:id="@+id/instructionsText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/dataEnterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/nameDataEnterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/label_foodName"
                android:layout_height="0dp"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/foodNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/foodNameHint"
                android:inputType="text" />

        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/brandDataEnterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/label_foodBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_brandName"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/foodBrandText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/brandNameHint"
                android:inputType="text" />

        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/caloriesDataEnterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/label_calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_calories"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/caloriesText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/caloriesHint"
                android:inputType="number" />

        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/proteinsDataEnterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/label_proteins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_proteins"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/proteinsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="true"
                android:hint="@string/proteinsHint"
                android:focusableInTouchMode="true"
                android:inputType="numberDecimal" />
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/carbsDataEnterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/label_carbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_carbs"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/carbsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="true"
                android:hint="@string/carbsHint"
                android:focusableInTouchMode="true"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sugarsDataEnterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/label_sugars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_sugars"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/sugarText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/sugarsHint"
                android:inputType="numberDecimal" >
            </EditText>
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/fiberDataEnterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/label_fiber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_fiber"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/fiberText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/fiberHint"
                android:inputType="numberDecimal" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fatsDataEnterLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/label_fats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_fats"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/fatsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusableInTouchMode="true"
                android:freezesText="true"
                android:hint="@string/fatsHint"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/saturatedFatsDataEnterLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/label_saturatedFats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_saturatedFats"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/saturatedFatsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusableInTouchMode="true"
                android:freezesText="true"
                android:hint="@string/saturatedFatsHint"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sodiumFatsDataEnterLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/label_sodium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_sodium"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/sodiumText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusableInTouchMode="true"
                android:freezesText="true"
                android:hint="@string/sodiumHint"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <Button
            android:id="@+id/commitButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="saveFood"
            android:text="@string/button_save" />
    </LinearLayout>
</ScrollView>
</LinearLayout>