<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/userDataEditAgeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userAge"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/userDataEditAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/userDataEditSexLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userSex"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/rdgGrupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/rdbOne"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioMan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/man" />

        <RadioButton
            android:id="@+id/radioWoman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/woman" />
    </RadioGroup>

    <TextView
        android:id="@+id/userDataEditHeightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userHeightEdit"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/userDataEditHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="okButton"
        android:text="@android:string/ok" />

</LinearLayout>