<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/foodsName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/foods"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/foodsListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="foodsListButton"
            android:text="@string/main_list" />

        <Button
            android:id="@+id/foodsAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="foodsAddButton"
            android:text="@string/main_add" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/mealsName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/meals"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/mealsListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mealsListButton"
            android:text="@string/main_list" />

        <Button
            android:id="@+id/mealsAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mealsAddButton"
            android:text="@string/main_add" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/exercisesName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exercises"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/exercisesListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="exercisesListButton"
            android:text="@string/main_list" />

        <Button
            android:id="@+id/exercisesAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="exercisesAddButton"
            android:text="@string/main_add" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/trainningsName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/trainnings"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/trainningsListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="trainningsListButton"
            android:text="@string/main_list" />

        <Button
            android:id="@+id/trainningsAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="trainningsAddButton"
            android:text="@string/main_add" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/trainningHisctoricName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/trainningHisctoric"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/trainningHisctoricListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="trainningHisctoricListButton"
            android:text="@string/main_list" />

        <Button
            android:id="@+id/trainningHisctoricAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="trainningHisctoricAddButton"
            android:text="@string/main_add" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/weightsName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weights"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/weightsListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="weightsListButton"
            android:text="@string/main_list" />

        <Button
            android:id="@+id/weightsAddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="weightsAddButton"
            android:text="@string/main_add" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/sharingName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sharing"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageButton
            android:id="@+id/sharingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sharingButton"
            android:src="@drawable/database"
            android:contentDescription="@string/sharingButtonDescription" />
    </LinearLayout>

</LinearLayout>