<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/userDataShowAgeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userAge"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/userDataShowAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/userDataShowSexLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userSex"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/userDataShowSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/userDataShowHeightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userHeight"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/userDataShowHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/userDataShowLastWeightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userWeight"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/userDataShowWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>